# my-python-web-services

./: README.md  setup.cfg
HW01-Intro/: pyproject.toml
HW02-Pytest/: pyproject.toml
HW02-Pytest/app/db/: connection.py  method.py
HW02-Pytest/app/db/tests/: test_db_creation.py
HW02-Pytest/app/product/: routers.py
HW02-Pytest/app/tests/: test_integration.py
HW02-Pytest/app/utils/: constants.py
HW03-grpc/: README.md  pyproject.toml
HW03-grpc/app/: server.py
HW03-grpc/app/questions/: questions.py
HW03-grpc/app/tests/: test_get_task.py
HW03-grpc/app/utils/: logger.py
HW04-db/: README.md
app/: __main__.py  client.py  contracts.py  main.py  routers.py  server.py
app/db/: connection.py  method.py
app/db/tests/: test_db_creation.py  test_product_methods.py
app/definitions/: service.proto
app/definitions/builds/: service_pb2.py  service_pb2_grpc.py
app/product/: contracts.py  routers.py
app/questions/: questions.py
templates/: index.html
