[tool.poetry]
name = "python-webservices-autumn-2022"
version = "0.1.0"
description = ""
authors = ["a1k0u <alko7enko@gmail.com>"]
readme = "README.md"
packages = [{include = "python_webservices_autumn_2022"}]

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.49.1"
grpcio-tools = "^1.49.1"
googleapis-common-protos = "^1.56.4"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
